--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -76,8 +76,7 @@ De bewoners kunnen elk jaar een programma beslissen, met activiteiten die voorge
 
 Op \emph{'t Wit Huis} verblijven momenteel 33 bewoners van 19 tot 75 jaar. Ze worden begeleid door 30-tal begeleiders.
 
-Mijn initiële contactpersoon in deze voorziening is mijn vader, Geert Viaene, maar tijdens de stage volg ik ook de activiteiten van Jürgen Tuerlinckx, Geert Viaene en Bart. \emph{'t Wit Huis} bevindt zich in de Rijselsestraat 13, 8200 Loppem.
-% check the name
+Mijn initiële contactpersoon in deze voorziening is mijn vader, Geert Viaene, maar tijdens de stage volg ik ook de activiteiten van Jürgen Tuerlinckx, Geert Viaene en Bart Vanquathem. \emph{'t Wit Huis} bevindt zich in de Rijselsestraat 13, 8200 Loppem.
 
 \section{Verslag}
 
@@ -105,7 +104,7 @@ Om 13:12 was mijn werk gedaan, en heb ik het evaluatieblad afgegeven aan de groe
 
 De middag begint net zoals de voormiddag met een vergadering van $\pm$ 25 minuten. Deze overloopt opnieuw elk van de bewoners, en zegt nog even snel hoe de taken verdeeld zijn.
 
-In de namiddag volg ik opvoeder Bart, die zal wandelen. We gaan naar Zevenkerke, waar we wandelen van 14:00 tot 15:30. Bij deze activiteit was er ook een andere vrijwilliger aanwezig die vaker meegaat. Bij het wandelen heb ik gepraat met alle vier de bewoners die mee gingen. Uit respect voor de privacy van de bewoners zal ik hier niet te diep op ingaan, maar ik heb toch een aantal keer moeten uitleggen dat ik dit verslag nu moest schrijven, en \emph{waarom} ik nu eigenlijk een stage doe voor 24 uur als ik geen gerelateerde richting doe.
+In de namiddag volg ik opvoeder Bart Vanquathem, die zal wandelen. We gaan naar Zevenkerke, waar we wandelen van 14:00 tot 15:30. Bij deze activiteit was er ook een andere vrijwilliger aanwezig die vaker meegaat. Bij het wandelen heb ik gepraat met alle vier de bewoners die mee gingen. Uit respect voor de privacy van de bewoners zal ik hier niet te diep op ingaan, maar ik heb toch een aantal keer moeten uitleggen dat ik dit verslag nu moest schrijven, en \emph{waarom} ik nu eigenlijk een stage doe voor 24 uur als ik geen gerelateerde richting doe.
 
 Ik vond het ook interessant om te horen hoe mensen die een heel anders profiel hebben dan de meeste mensen toch nog vergelijkbare gedachten hebben als anderen.
 
@@ -172,8 +171,15 @@ Vanaf dat we terug waren (11:30) was er even vrije tijd, waarin Jurgen mijn eval
 Bij het eten bleef ik deze keer bij de derde groep, waarbij de ouderen zijn. Omdat de meeste van hun niet veel kracht in hun handen meer hebben, heb ik al hun eten eerst gesneden. Hun gehoor was wel een moeilijkheid bij het converseren tijdens het eten, maar toch heb ik de meeste tijd over hun leven kunnen praten en dingen kunnen bijleren.
 
 \subsubsection{Namiddag}
-Om 13:30 begint de namiddag met de gewoonlijke vergadering, waarin buiten de bespreking van de gebeurde zaken ook de planning voor deze namiddag besproken wordt. Ik heb nu, net als vorige week wandelen met Bart.
-% check name
+Om 13:30 begint de namiddag met de gewoonlijke vergadering, waarin buiten de bespreking van de gebeurde zaken ook de planning voor deze namiddag besproken wordt. Ik heb nu, net als vorige week wandelen met Bart Vanquathem. Deze wandeling was iets anders dan de vorige, in de zin dat we eerst nog in Beernem bij de psychiatrische instelling moesten passeren.
+
+Een van de bewoners heeft namelijk vorige donderdag een woedeaanval gehad, en blijft nu dus voor iets meer dan een week daar afkoelen. We kwamen enkele van zijn spullen afzetten, zoals zijn radiospeler.
+
+Hierna hebben we in de afwisselend miezerende en droge regen gewandeld. Omdat het al redelijk laat was hebben we uiteindelijk maar een uur ongeveer kunnen wandelen hier, maar het was toch aangenaam.
+
+Deze keer heb ik niet meegewandeld, maar de rolstoel van een van de bewoners geduwd, en een andere bewoner die zich eraan vasthield begeleid. Het was iets moeilijker om een interessant gesprek te voeren met hun, want beide hadden moeite met praten, maar ik heb toch geprobeerd zo goed mogelijk te luisteren en al met al was dat wel leuk.
+
+Deze keer ging het gesprek vooral over dingen die zij niet kunnen zien omdat ze zowel niet of heel slecht kunnen zien, maar dat ze ook niet zomaar overal naartoe kunnen gaan. Ik heb dus vooral over dingen als school, vrije tijd en over astronomie gepraat.
 % more
 
 \section{Ervaringen}
@@ -190,7 +196,11 @@ Volgens de begeleider waarbij ik de muziekactiviteit deed, heb ik goed aangevuld
 
 Volgens de andere begeleiders kan ik ``goed omgaan met de bewoners'' en ``breng ik [\dots] op een positieve manier aan het lachen''.
 
-Jurgen heeft mijn evaluatie volgens het blad ingevuld. Hierin schrijft hij dat hij tevreden is van mijn prestaties
+Jurgen heeft mijn evaluatie volgens het blad ingevuld. Hierin schrijft hij dat hij tevreden is van mijn prestaties, met name het feit dat ik een hoop initiatief genomen heb. Onder andere zelf vragen aan bepaalde bewoners of ze ergens hulp bij kunnen gebruiken, en ook wanneer de taak van de dinsdagnamiddag gedaan was dat ik zelf met een van de begeleiders gepraat heb, zonder dat dit specifiek gevraagd was.
+
+Hij vertelde me dat hij toch even had moeten nadenken over wat hij zou schrijven bij het stukje ``werkpunten'', maar na even nadenken heeft hij opgeschreven dat hij merkte dat bij mijn stage dat ik vooral één-op-één bezig was, en minder met de hele groep, hierbij voegde hij wel toe dat ik daarbij wel genoeg wisselde en geen van de bewoners \emph{achterliet}. Dit is echter iets dat eerder belangrijk is bij een stage die als doel heeft om een opvoeder/begeleider te worden, en minder van belang bij een stage zoals deze volgens hem.
+
+Verder bij het beluisteren van wat de andere begeleiders terloops zeiden had ik het gevoel dat ze tevreden waren met wat ik deed, maar hun opmerkingen gingen vaker
 % more
 
 \subsection{Door mezelf}
@@ -206,11 +216,10 @@ Tijdens mijn stage heb ik ook gemerkt hoe veel je nog kan doen als je volgens co
 
 Wat ook interessant is, is hoe bepaalde beperkingen die een mens heeft ervoor kan zorgen dat dat opgevangen wordt door andere dingen die dan weer heel goed gaan. Bijvoorbeeld de bewoners die meedoen aan het muziekproject hebben allemaal een uitzonderlijk goed ritmegevoel, zelfs al krijgen ze het niet altijd perfect uit hun armen of stembanden. Daardoor is het eigenlijk los van hun handicaps nog steeds een relatief goeie band.
 
-Ik zou ook willen pleiten voor meer aanpassing in de maatschappij om mensen met een beperking meer te kunnen integreren in de gewone dag. Door kleine aanpassingen kan je een veel groter publiek bereiken. Websites kunnen ervoor zorgen dat hun producten altijd goed rekening houden met voorleessoftware, vergroot lettertype, contrast \dots Een voorbeeld in een andere sector is dan bijvoorbeeld de \emph{batphone}, een muziekinstrument dat lijkt op een grote panfluit in felle kleuren die bespeeld kan worden met grotere pingpongpalletjes uit dik foam is heel goed te bespelen door muzikanten die bijna niet kunnen zien zelfs.
+Ik zou ook willen pleiten voor meer aanpassing in de maatschappij om mensen met een beperking meer te kunnen integreren in de gewone dag. Door kleine aanpassingen kan je een veel groter publiek bereiken. Websites kunnen ervoor zorgen dat hun producten altijd goed rekening houden met voorleessoftware, vergroot lettertype, contrast \dots Een voorbeeld in een andere sector is dan bijvoorbeeld de \emph{batphone}, een muziekinstrument dat lijkt op een grote panfluit in felle kleuren die bespeeld kan worden met grotere pingpongpalletjes uit dik foam is heel goed te bespelen door muzikanten die bijna niet kunnen zien zelfs. In mijn professioneel leven zal ik ervoor zorgen dat wat ik maak altijd ook duidelijk is met een groter lettertype of met een \emph{screenreader}.
 
-Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in het bijzonder Jürgen Tuerlinckx, Bart, Geert Viaene en de groepschef Luc Neirinck om me te begeleiden in deze stage en er een interessante invulling aan geven. Maar meer dan ze te bedanken voor mijn eigen ervaring zou ik ze willen bedanken voor wat ze alle dagen doen: op een vrije manier alle bewoners dagelijks helpen met hun moeilijkheden en hun tijd zo aangenaam mogelijk maken.
-% check the name
+Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in het bijzonder Jürgen Tuerlinckx, Bart Vanquathem, Geert Viaene en de groepschef Luc Neirinck om me te begeleiden in deze stage en er een interessante invulling aan geven. Maar meer dan ze te bedanken voor mijn eigen ervaring zou ik ze willen bedanken voor wat ze alle dagen doen: op een vrije manier alle bewoners dagelijks helpen met hun moeilijkheden en hun tijd zo aangenaam mogelijk maken.
 
-Als laatste zou ik ook (ook al weet ik dat ze dit niet kunnen lezen) alle bewoners van \emph{'t Wit Huis} willen bedanken voor hun enthousiasme en de tijd die ik met hun heb kunnen besteden.
+Als laatste zou ik ook (ook al weet ik dat ze dit niet kunnen lezen, maar misschien wel voorgelezen worden) alle bewoners van \emph{'t Wit Huis} willen bedanken voor hun enthousiasme en de tijd die ik met hun heb kunnen besteden.
 
 \end{document}
