evaluatie en contract

--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -222,4 +222,21 @@ Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in h
 
 Als laatste zou ik ook (ook al weet ik dat ze dit niet kunnen lezen, maar misschien wel voorgelezen worden) alle bewoners van \emph{'t Wit Huis} willen bedanken voor hun enthousiasme en de tijd die ik met hun heb kunnen besteden.
 
+\newpage
+
+\section{Bijlagen}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth,height=0.9\textheight,keepaspectratio]{./contract.jpg}
+  %\caption{De groep die muziek maakt tussen twee nummers in}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth,height=0.9\textheight,keepaspectratio]{./evaluatie.jpg}
+  %\caption{De groep die muziek maakt tussen twee nummers in}
+\end{figure}
+
+
 \end{document}
