--- a/Ethiek/verslag.tex
+++ b/Ethiek/verslag.tex
@@ -90,7 +90,7 @@ Ik ben toegekomen per fiets om iets na 8:00 's morgens. De echte werkdag begon e
 
 Rond 8:30 begint de vergadering, waarvan ik uiteraard niets mag vertellen in dit verslag. Hier kreeg ik mijn taak voor de dag en de volgende dagen, namelijk deze morgen \emph{klusklub}, in de namiddag \emph{wandelen}, morgen \emph{muziek} en in de namiddag \emph{bewonersvergadering} (voor de meeste andere begeleiders is het dan vergadering waar ik niet aan meedoe). Volgende maandag is het hetzelfde programma als vandaag.
 
-Ik volg deze morgen opvoeder Jürgen Tuerlinkx. We beginnen met de drie bewoners waarbij hij de \emph{morgengroet} doet. Dit is redelijk simpel aangezien het opstaan relatief autonoom gebeurt (of misschien tijdens de nachtshift, ik ben het niet helemaal zeker). De taak die hierbij hoort is eigenlijk redelijk gemakkelijk, en bestaat uit het controleren dat die bewoners effectief aanwezig zijn, hun bet effectief gemaakt is en ze geschoren zijn en hun tanden gepoetst hebben. Dit gebeurde aan een redelijk laid-back tempo, waardoor het ongeveer 10:00 was toen we begonnen met de activiteit.
+Ik volg deze morgen opvoeder Jürgen Tuerlinkx. We beginnen met de drie bewoners waarbij hij de \emph{morgengroet} doet. Dit is redelijk simpel aangezien het opstaan relatief autonoom gebeurt (of misschien tijdens de nachtshift, ik ben het niet helemaal zeker). De taak die hierbij hoort is eigenlijk redelijk gemakkelijk, en bestaat uit het controleren of die bewoners effectief aanwezig zijn, hun bed effectief gemaakt is en ze geschoren zijn en hun tanden gepoetst hebben. Dit gebeurde aan een redelijk laid-back tempo, waardoor het ongeveer 10:00 was toen we begonnen met de activiteit.
 
 De activiteit in de morgen heette \emph{klusklub}, waarbij een aantal bewoners meehelpen met enkele klusjes die nodig zijn in het gebouw. Dit kunnen dingen zijn als gebroken toestellen repareren, of zoals nu een verbetering ergens aan toevoegen.
 
@@ -106,7 +106,7 @@ De middag begint net zoals de voormiddag met een vergadering van $\pm$ 25 minute
 
 In de namiddag volg ik opvoeder Bart Vanquathem, die zal wandelen. We gaan naar Zevenkerke, waar we wandelen van 14:00 tot 15:30. Bij deze activiteit was er ook een andere vrijwilliger aanwezig die vaker meegaat. Bij het wandelen heb ik gepraat met alle vier de bewoners die mee gingen. Uit respect voor de privacy van de bewoners zal ik hier niet te diep op ingaan, maar ik heb toch een aantal keer moeten uitleggen dat ik dit verslag nu moest schrijven, en \emph{waarom} ik nu eigenlijk een stage doe voor 24 uur als ik geen gerelateerde richting doe.
 
-Ik vond het ook interessant om te horen hoe mensen die een heel anders profiel hebben dan de meeste mensen toch nog vergelijkbare gedachten hebben als anderen.
+Ik vond het ook interessant om te horen hoe mensen die een heel ander profiel hebben dan de meeste mensen toch nog vergelijkbare gedachten hebben als anderen.
 
 Na het wandelen drinken we allemaal een drankje in de cafetaria van de Abdij van Zevenkerke. Bij het terug aankomen in de instelling praat ik nog met een bewoner die wel drie dagen per week thuisblijft, hij werkt bij een woonzorgcentrum in de buurt bij de afwas.
 
@@ -122,7 +122,7 @@ Zoals eerder al gezegd zijn er al cd's opgenomen in het verleden, en nu werken z
 
 De bewoners schrijven hun eigen nummers, die vaak gaan over liefde, dingen die ze tegenkomen tijdens de dagelijkse sleur. Enkele bewoners zingen ook over de dingen die ze herinneren van voor ze hier verbleven, van toen ze een \emph{normaler} leven hadden.
 
-Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op de \emph{batphone} (een soort panfluit, maar dan met elk van de buizen met een diameter van tien centimeter, en één tot anderhalve meter lang, je bespeelt het met een soort pingpongpalletjes gemaakt uit foam) speelde en meezong. Ik merkte dat ze door hun meestal visuele handicap een uitzonderlijk goed ritmegevoel hebben.
+Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op de \emph{batphone} (een soort panfluit, maar dan met elk van de buizen met een diameter van tien centimeter, en één tot anderhalve meter lang, je bespeelt het met een soort pingpongpallet gemaakt uit foam) speelde en meezong. Ik merkte dat ze door hun meestal visuele handicap een uitzonderlijk goed ritmegevoel hebben.
 
 \begin{figure}[H]
   \centering
@@ -132,7 +132,7 @@ Tijdens deze activiteit was er een grote vraag vanuit de bewoners dat ik ook op 
 
 Om 11:45 eindigde deze activiteit en heb ik in een andere groep dan gisteren meegeholpen met het eten. Het afwassen gebeurt ook deels met de bewoners, die hier kennelijk wel plezier in hebben, maar niet iedereen vindt dit aangenaam, dus worden ze er niet toe verplicht. Om 13:00 was dit gedaan.
 
-Dan vertelde een bewoners dat hij iets had dat hij mij graag wou laten zien. Hij had namelijk een liedje opgenomen dat op de radio speelde (\emph{Relax - Mika}). Hij genoot er duidelijk van dat hij nu tijd had om wat hij leuk vond te delen met iemand die minder tijdsdruk heeft dan een andere opvoeder.
+Dan vertelde een bewoner dat hij iets had dat hij mij graag wou laten zien. Hij had namelijk een liedje opgenomen dat op de radio speelde (\emph{Relax - Mika}). Hij genoot er duidelijk van dat hij nu tijd had om wat hij leuk vond te delen met iemand die minder tijdsdruk heeft dan een andere opvoeder.
 
 Daaropvolgend werd hij opgebeld door zijn ouders, waarna hij door ging om de verjaardag van één van de anderen te vieren in de Pizza Hut. Hij vertrok rond 13:20.
 
@@ -156,7 +156,7 @@ Om 16:40 ga ik weg van bij die bewoner omdat de avondshift begint, en ga ik naar
 
 \subsection{Maandag 21 december 2015}
 \subsubsection{Voormiddag}
-Deze voormiddag is begonnen zoals alle dagen om 8:30 met de gewoonlijke vergadering. Hierin werden alle bewoners overlopen en alles wat tijdens de vorige dagen gebeurd is. Aangezien dit allemaal confidentieel is, kan ik hier niet veel over vertellen. Ik volg deze morgen volg ik opnieuw Jurgen. Ik volg dus ook samen met hem vier bewoners voor de morgenronde.
+Deze voormiddag is begonnen zoals alle dagen om 8:30 met de gewoonlijke vergadering. Hierin werden alle bewoners overlopen en alles wat tijdens de vorige dagen gebeurd is. Aangezien dit allemaal confidentieel is, kan ik hier niet veel over vertellen. Ik volg deze morgen opnieuw Jurgen. Hierbij hoort dus ook samen met hem vier bewoners voor de morgenronde.
 
 Ik heb niet zo heel goed opgelet tot hoe lang dit duurde, maar om half 10 waren we allemaal koffie aan het drinken in het muzieklokaal --- waar de \emph{klusklub} ook samenkomt. Omdat er veel afwezigen zijn in de kerstvakantie ---enkelen bij hun familie op bezoek, anderen zijn zelfs op reis --- zijn we slechts met drie bewoners. Deze keer is er een klusje in de \emph{klusbus} gestopt, het lijmen van de gebroken filter voor een badkamerlamp.
 
@@ -175,9 +175,9 @@ Om 13:30 begint de namiddag met de gewoonlijke vergadering, waarin buiten de bes
 
 Een van de bewoners heeft namelijk vorige donderdag een woedeaanval gehad, en blijft nu dus voor iets meer dan een week daar afkoelen. We kwamen enkele van zijn spullen afzetten, zoals zijn radiospeler.
 
-Hierna hebben we in de afwisselend miezerende en droge regen gewandeld. Omdat het al redelijk laat was hebben we uiteindelijk maar een uur ongeveer kunnen wandelen hier, maar het was toch aangenaam.
+Hierna hebben we in de afwisselend miezerende regen en opklaringen gewandeld. Omdat het al redelijk laat was hebben we uiteindelijk maar een uur ongeveer kunnen wandelen hier, maar het was toch aangenaam.
 
-Deze keer heb ik niet meegewandeld, maar de rolstoel van een van de bewoners geduwd, en een andere bewoner die zich eraan vasthield begeleid. Het was iets moeilijker om een interessant gesprek te voeren met hun, want beide hadden moeite met praten, maar ik heb toch geprobeerd zo goed mogelijk te luisteren en al met al was dat wel leuk.
+Deze keer heb ik niet meegewandeld, maar de rolstoel van een van de bewoners geduwd, en een andere bewoner die zich eraan vasthield begeleid. Het was iets moeilijker om een interessant gesprek te voeren met hen, want beide hadden moeite met praten, maar ik heb toch geprobeerd zo goed mogelijk te luisteren en al met al was dat wel leuk.
 
 Deze keer ging het gesprek vooral over dingen die zij niet kunnen zien omdat ze zowel niet of heel slecht kunnen zien, maar dat ze ook niet zomaar overal naartoe kunnen gaan. Ik heb dus vooral over dingen als school, vrije tijd en over astronomie gepraat.
 % more
@@ -196,12 +196,11 @@ Volgens de begeleider waarbij ik de muziekactiviteit deed, heb ik goed aangevuld
 
 Volgens de andere begeleiders kan ik ``goed omgaan met de bewoners'' en ``breng ik [\dots] op een positieve manier aan het lachen''.
 
-Jurgen heeft mijn evaluatie volgens het blad ingevuld. Hierin schrijft hij dat hij tevreden is van mijn prestaties, met name het feit dat ik een hoop initiatief genomen heb. Onder andere zelf vragen aan bepaalde bewoners of ze ergens hulp bij kunnen gebruiken, en ook wanneer de taak van de dinsdagnamiddag gedaan was dat ik zelf met een van de begeleiders gepraat heb, zonder dat dit specifiek gevraagd was.
+Jurgen heeft mijn evaluatie volgens het blad ingevuld. Hierin schrijft hij dat hij tevreden is over mijn prestaties, met name het feit dat ik een hoop initiatief genomen heb. Onder andere zelf vragen aan bepaalde bewoners of ze ergens hulp bij kunnen gebruiken, en ook wanneer de taak van de dinsdagnamiddag gedaan was dat ik zelf met een van de begeleiders gepraat heb, zonder dat dit specifiek gevraagd was.
 
 Hij vertelde me dat hij toch even had moeten nadenken over wat hij zou schrijven bij het stukje ``werkpunten'', maar na even nadenken heeft hij opgeschreven dat hij merkte dat bij mijn stage dat ik vooral één-op-één bezig was, en minder met de hele groep, hierbij voegde hij wel toe dat ik daarbij wel genoeg wisselde en geen van de bewoners \emph{achterliet}. Dit is echter iets dat eerder belangrijk is bij een stage die als doel heeft om een opvoeder/begeleider te worden, en minder van belang bij een stage zoals deze volgens hem.
 
-Verder bij het beluisteren van wat de andere begeleiders terloops zeiden had ik het gevoel dat ze tevreden waren met wat ik deed, maar hun opmerkingen gingen vaker
-% more
+Verder bij het beluisteren van wat de andere begeleiders terloops zeiden had ik het gevoel dat ze tevreden waren met wat ik deed, maar hun opmerkingen gingen vaker over mijn leven buiten school en hoeveel ik veranderd ben sinds ik als klein kindje hier kwam.
 
 \subsection{Door mezelf}
 Ik heb eigenlijk echt genoten van de stage, het is een ontluchting om te zien hoe bepaalde mensen tevreden kunnen zijn met minder te bereiken. Ze beseffen zelf ook dat ze bijvoorbeeld nooit zullen lezen, maar ze kunnen hun creativiteit kwijt op een hoop verschillende manieren. Hier is een belangrijke levensles uit te vinden, namelijk dat je moet zien als je op je eigen grens komt, en dat je dan het gelukkigst kan zijn door niet jezelf (of anderen) proberen verder te duwen.
@@ -218,7 +217,7 @@ Wat ook interessant is, is hoe bepaalde beperkingen die een mens heeft ervoor ka
 
 Ik zou ook willen pleiten voor meer aanpassing in de maatschappij om mensen met een beperking meer te kunnen integreren in de gewone dag. Door kleine aanpassingen kan je een veel groter publiek bereiken. Websites kunnen ervoor zorgen dat hun producten altijd goed rekening houden met voorleessoftware, vergroot lettertype, contrast \dots Een voorbeeld in een andere sector is dan bijvoorbeeld de \emph{batphone}, een muziekinstrument dat lijkt op een grote panfluit in felle kleuren die bespeeld kan worden met grotere pingpongpalletjes uit dik foam is heel goed te bespelen door muzikanten die bijna niet kunnen zien zelfs. In mijn professioneel leven zal ik ervoor zorgen dat wat ik maak altijd ook duidelijk is met een groter lettertype of met een \emph{screenreader}.
 
-Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in het bijzonder Jürgen Tuerlinckx, Bart Vanquathem, Geert Viaene en de groepschef Luc Neirinck om me te begeleiden in deze stage en er een interessante invulling aan geven. Maar meer dan ze te bedanken voor mijn eigen ervaring zou ik ze willen bedanken voor wat ze alle dagen doen: op een vrije manier alle bewoners dagelijks helpen met hun moeilijkheden en hun tijd zo aangenaam mogelijk maken.
+Om af te sluiten bedank ik graag alle werknemers van \emph{'t Wit Huis}, en in het bijzonder Jürgen Tuerlinckx, Bart Vanquathem, Geert Viaene en de groepschef Luc Neyrinck om me te begeleiden in deze stage en er een interessante invulling aan geven. Maar meer dan ze te bedanken voor mijn eigen ervaring zou ik ze willen bedanken voor wat ze alle dagen doen: op een vrije manier alle bewoners dagelijks helpen met hun moeilijkheden en hun tijd zo aangenaam mogelijk maken.
 
 Als laatste zou ik ook (ook al weet ik dat ze dit niet kunnen lezen, maar misschien wel voorgelezen worden) alle bewoners van \emph{'t Wit Huis} willen bedanken voor hun enthousiasme en de tijd die ik met hun heb kunnen besteden.
 
